--- a/client/stylesheets/scss/_branding.scss
+++ b/client/stylesheets/scss/_branding.scss
@@ -47,13 +47,13 @@ $github-gray: #e4e4e4;
 
 // Styling for the fonts
 @mixin font-stack(){
-  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', sans-serif;
   font-weight: 300;
 }
 
 @mixin logo-font(){
-  font-family: 'Montserrat', 'Helvetica Neue', 'Helvetica', sans-serif;
-  font-weight: 700;
+  font-family: 'Avenir Next', 'Montserrat', 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-weight: 600;
 }
 
 // ===============================================================================
